Add container name for php service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 services:
   php:
     image: ramageek/bcrud:8.2-fpm-nginx-npm
+    container_name: laravel-app_php
     volumes:
       - .:/var/www/html/
     ports:
