--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "compile": [
+            "touch /app/database/database.sqlite",
+            "@php artisan migrate --force --seed",
+            "@php artisan optimize"
         ]
     },
     "extra": {
