--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
             "@php artisan key:generate --ansi"
         ],
         "compile": [
+            "composer install --dev",
             "@php artisan migrate --force --seed",
             "@php artisan optimize"
         ]
