Add storage:link to compile scripts

--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,9 @@
         ],
         "compile": [
             "composer install --dev",
-            "@php artisan migrate --force --seed",
-            "@php artisan optimize"
+            "@php artisan migrate:fresh --force --seed",
+            "@php artisan optimize",
+            "@php artisan storage:link"
         ]
     },
     "extra": {
