--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-pcntl": "*",
         "ext-redis": "*",
+        "ext-swoole": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/octane": "^2.0",
