--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^10.8",
         "laravel/octane": "^2.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "tomasvotruba/punchcard": "^0.2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
