Rename and add lint action for Laravel

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel Tests
+name: Laravel CQ
 
 on:
   push:
@@ -7,5 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  laravel-tests:
+  lint:
+    uses: beyondCRUD/.github/.github/workflows/coding-standards.yml@main
+  tests:
     uses: beyondCRUD/.github/.github/workflows/laravel-tests.yml@main
