Update static analysis workflow for Laravel

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,19 +7,8 @@ on:
     branches: ["main"]
 
 jobs:
-  static-analyze:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.1"
-      - uses: actions/checkout@v3
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
-      - name: Start Analyzing
-        run: ./vendor/bin/phpstan analyse
+  static-analyzing:
+    uses: beyondCRUD/.github/.github/workflows/laravel-phpstan.yml@main
   coding-standart:
     uses: beyondCRUD/.github/.github/workflows/coding-standards.yml@main
   tests:
