--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "tomasvotruba/punchcard": "^0.2.4"
     },
     "require-dev": {
+        "brianium/paratest": "^7.1",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
