--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,6 +1,11 @@
 parameters:
 	ignoreErrors:
 		-
+			message: "#^Match expression does not handle remaining values\\: int\\|string$#"
+			count: 2
+			path: src/Domain/Content/Enums/BlogPostStatus.php
+
+		-
 			message: "#^Method Support\\\\Csv\\:\\:open\\(\\) has no return type specified\\.$#"
 			count: 1
 			path: src/Support/Csv.php
