--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require-dev": {
         "brianium/paratest": "^7.1",
         "fakerphp/faker": "^1.9.1",
+        "itsgoingd/clockwork": "^5.1",
         "knuckleswtf/scribe": "^4.19",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
