--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/octane": "^2.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-data": "^3.5",
         "spatie/laravel-enum": "^3.0",
         "timacdonald/json-api": "1.0.0-beta.4",
         "tomasvotruba/punchcard": "^0.2.4"
